# agent-runner

./: .containerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  agent-config.example.yaml  agent-config.yaml  agent_loader.py  agent_registry.py  cloudbuild.yaml  entrypoint.sh  gcloud-dev-config.yaml  oauth.py  pyproject.toml  server.py  test_a2a.py
.claude/agents/: firestore-agent.md  gcloud-operator.md  orchestrator.md  pubsub-agent.md
.claude/hooks/: session-start.sh
.github/workflows/: cd.yml  ci.yml
scripts/: register_agent.py
src/agent_runner/: __init__.py  __main__.py  agent.py  config.py  server.py
src/agent_runner/a2a/: card.py  client.py  discovery.py  executor.py
src/agent_runner/auth/: middleware.py  oauth.py
src/agent_runner/hooks/: audit.py  reflection.py  registry.py
src/agent_runner/mcp/: server.py  tools.py
src/agent_runner/registry/: firestore.py  pubsub.py
src/agent_runner/worker/: pubsub.py
tests/: test_a2a.py  test_agent.py  test_config.py  test_discovery.py  test_hooks.py  test_mcp.py  test_register_agent.py  test_registry.py  test_server.py  test_worker.py
